# lincrusta

./: Cargo.toml  README.md
.github/workflows/: rust.yml
config/: default.toml
resources/: wallpaper-window.xml
src/: config.rs  config_service.rs  dbus_service.rs  lib.rs  ordering.rs
