[package]
name = "wallpaper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wallpaperd"
path = "src/bin/wallpaperd.rs"

[[bin]]
name = "wallpaper-cli"
path = "src/bin/wallpaper.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
glib = "0.22"
gtk4 = { version = "0.11", features = ["v4_10"] }
gtk4-layer-shell = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
zbus = "5"
toml_edit = "0.25"
env_logger = "0.11.9"
log = "0.4.29"
rand = "0.10.0"

[dev-dependencies]
tempfile = "3"
serial_test = "0.6"

[profile.test]
opt-level = 0
